--- a/.env
+++ b/.env
@@ -20,12 +20,13 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=cj114801_pos
-DB_USERNAME=cj114801_pos
-DB_PASSWORD=Shod63mm
+DB_CONNECTION=sqlite
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=cj114801_pos
+# DB_USERNAME=cj114801_pos
+# DB_PASSWORD=Shod63mm
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
